react-app/src/components/league-components/LeagueOfLegendsStyle.css
.LoL-stats-div {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
  padding-top: 25px;
  background-image: linear-gradient(#4ac9e3, #006eb3);
}

div {
  text-align: center;
}

p {
  text-align: center;
  line-height: 10px;
  font-size: 24px;
}

.bold-text {
  font-weight: bold;
}

.champion-list-container {
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
}

.champion-item {
  margin-bottom: 10px;
}

.champion-list {
  list-style-type: none;
}

.champion-entry {
  border: 1px solid #255;
  border-radius: 5px;
  background-image: linear-gradient(#f8eddb, #e3e1d9);
  margin-bottom: 10px;
  padding: 10px;
  display: "flex";
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.champion-info {
  margin-right: 10px;
  flex-grow: 1;
}

.champion-name {
  font-weight: bold;
  color: darkblue;
}

.mastery-points {
  color: red;
}
.champion-image {
  width: 85px;
  height: auto;
  padding-right: 10px;
  margin-left: 10px;
}

.tab {
  padding: 10px;
  margin: 0 5px;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  font-size: 26px;
  color: white;
}

.tab.active {
  font-weight: bold;
}

.match-box {
  border-radius: 5px;
  margin-bottom: 5px;
  padding: 10px;
  display: flex;
  flex-direction: row;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  list-style: none;
  width: 60%;
}

.winner-box {
  border: 5px solid green;
  background-color: #c6edc3;
}

.loser-box {
  border: 5px solid red;
  background-color: #ff9a98;
}

.match-participants {
  text-align: right;
  list-style: none;
  font-size: 14px;
}

.participant-champ-img {
  width: 30px;
  margin-left: 5px;
  border-radius: 10px;
  margin-bottom: 1px;
  margin-top: 1px;
}

.red-side {
  margin-top: 0px;
  margin-right: 0;
  width: auto;
}

.blue-side {
  margin-bottom: 0px;
  margin-right: 0;
  width: auto;
}

.all-participants-list {
  margin-right: 0;
  margin-left: auto;
  display: flex;
  margin-top: auto;
  margin-bottom: auto;
}

.kda {
  margin-left: 5px;
  font-size: 24px;
  font-weight: bold;
}

.summoner-spell-img {
  margin-top: 5px;
  width: 45px;
  margin-left: 5px;
  margin-right: 5px;
  border-radius: 5px;
}

.two-summoner-icons {
  margin-left: 5px;
  margin-right: auto;
}
.item-list-container {
  margin: auto;
  padding: 10px;
}

.item-list {
  list-style-type: none;
  text-align: center;
}

.item-list li {
  display: inline-block;
}

.item-icon {
  width: 50px;
  height: auto;
  margin-right: 5px;
  border-radius: 5px;
}

.game-duration {
  font-size: 24px;
  font-weight: bold;
}

.game-date {
  font-size: 24px;
  font-weight: bold;
}

.rank-icon {
  height: 200px;
}

.rank-text {
  font-weight: bold;
  font-size: 32px;
}

